--- a/code/src/patterns/ChoiceInputPattern.fxml
+++ b/code/src/patterns/ChoiceInputPattern.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="code.src.patterns.ChoiceInputPatternController"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="code.src.patterns.ChoiceInputPatternController">
+   <children>
+      <ChoiceBox fx:id="fieldData" layoutX="140.0" layoutY="9.0" prefHeight="16.0" prefWidth="210.0" />
+      <Text fx:id="nameOfField" layoutX="14.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NameOfElement" wrappingWidth="109.21133804321289" />
+   </children>
+</Pane>
