--- a/code/src/patterns/MainWindow.fxml
+++ b/code/src/patterns/MainWindow.fxml
@@ -13,12 +13,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-
 
 <AnchorPane prefHeight="367.0" prefWidth="752.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <children>
-      <BorderPane layoutX="-1.0" prefHeight="43.0" prefWidth="754.0">
+      <BorderPane fx:id="menuPane" layoutX="-1.0" prefHeight="43.0" prefWidth="754.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
             <MenuBar prefHeight="7.0" prefWidth="734.0" style="-fx-border-color: darkgray;" BorderPane.alignment="CENTER">
               <menus>
@@ -98,30 +98,30 @@
             </MenuBar>
          </top>
       </BorderPane>
-      <GridPane layoutY="40.0" prefHeight="322.0" prefWidth="754.0" style="-fx-padding: 10px;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="45.0">
+      <GridPane layoutY="40.0" prefHeight="422.0" prefWidth="754.0" style="-fx-padding: 10px;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="45.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="366.0" minWidth="10.0" prefWidth="278.6666666666667" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="468.0" minWidth="10.0" prefWidth="454.6666666666667" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="320" minWidth="320" />
+          <ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="300" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="320.0" minHeight="10.0" prefHeight="250.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="320.0" minHeight="10.0" percentHeight="100" prefHeight="250.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane alignment="TOP_CENTER" prefHeight="317.0" prefWidth="270.0">
+            <GridPane alignment="TOP_CENTER" prefHeight="517.0" prefWidth="270.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="276.33331298828125" minHeight="10.0" prefHeight="276.33331298828125" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="153.0" minHeight="10.0" prefHeight="44.333353678385436" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="276.33331298828125" minHeight="10.0" percentHeight="85" prefHeight="276.33331298828125" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="153.0" minHeight="10.0" percentHeight="15" prefHeight="44.333353678385436" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView prefHeight="268.0" prefWidth="263.0" style="-fx-border-color: darkgray;">
+                  <TableView fx:id="tableView" prefHeight="268.0" prefWidth="303.0" style="-fx-border-color: darkgray;">
                     <columns>
-                      <TableColumn prefWidth="45.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="№Л/д" />
-                      <TableColumn prefWidth="95.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Фамилия" />
-                        <TableColumn prefWidth="50.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Имя" />
-                        <TableColumn prefWidth="85.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Отчество" />
+                      <TableColumn prefWidth="55.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="№Л/д" />
+                      <TableColumn prefWidth="105.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Фамилия" />
+                        <TableColumn prefWidth="60.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Имя" />
+                        <TableColumn prefWidth="95.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Отчество" />
                     </columns>
                   </TableView>
                </children>
@@ -134,10 +134,18 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="222.6666717529297" minHeight="10.0" prefHeight="179.33331298828125" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="155.33334350585938" minHeight="10.0" prefHeight="140.66668701171875" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="222.6666717529297" minHeight="10.0" percentHeight="50" prefHeight="179.33331298828125" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="155.33334350585938" minHeight="10.0" percentHeight="50" prefHeight="140.66668701171875" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
+                  <Pane prefHeight="95.0" prefWidth="412.0" style="-fx-border-color: darkgray; -fx-background-color: white;">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" top="5.0" />
+                     </GridPane.margin>
+                  </Pane>
                   <TabPane prefHeight="200.0" prefWidth="200.0" stylesheets="@css/tab.css" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="1">
                     <tabs>
                       <Tab style="-fx-background-color: gainsboro; -fx-border-color: darkgray;" text="Конк-ые группы">
