--- a/code/src/patterns/BoolInputPattern.fxml
+++ b/code/src/patterns/BoolInputPattern.fxml
@@ -6,7 +6,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="code.src.patterns.BoolInputPatternController">
    <children>
-      <CheckBox fx:id="checkbox" layoutY="4.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="310.0" text="CheckBox">
+      <CheckBox fx:id="checkbox" layoutY="4.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="310.0" text="nameOfElement">
          <padding>
             <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
          </padding></CheckBox>
