--- a/code/src/patterns_simple/DateInputPattern.fxml
+++ b/code/src/patterns_simple/DateInputPattern.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.DateInputPatternController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.DateInputPatternController">
    <children>
       <FlowPane fx:id="flowPane" alignment="CENTER" prefHeight="35.0" prefWidth="364.0">
          <children>
-            <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="nameOfElement" />
+            <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="nameOfElement" wrappingWidth="100.0" />
             <DatePicker fx:id="fieldData" prefHeight="25.0" prefWidth="210.0">
                <FlowPane.margin>
                   <Insets left="20.0" />
