--- a/code/src/patterns_simple/PhoneNumberInputPattern.fxml
+++ b/code/src/patterns_simple/PhoneNumberInputPattern.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.layout.*?>
 <?import controllers_simple.MaskField ?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.PhoneMaskInputPatternController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.PhoneMaskInputPatternController">
     <children>
         <FlowPane fx:id="flowPane" alignment="CENTER" prefHeight="35.0" prefWidth="364.0">
             <children>
-                <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="nameOfElement" />
+                <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="nameOfElement" wrappingWidth="100.0" />
                 <MaskField fx:id="fieldData" mask="+7(###)###-##-##" prefWidth="210" prefHeight="25">
                     <FlowPane.margin>
                         <Insets left="20.0" />
