fxml version is ignored

--- a/code/src/patterns_simple/AddEditDeleteButtons.fxml
+++ b/code/src/patterns_simple/AddEditDeleteButtons.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="423.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.AddEditDeleteButtonsController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="423.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers_simple.AddEditDeleteButtonsController">
    <children>
       <Pane prefHeight="75.0" prefWidth="141.0">
          <children>
