--- a/code/src/patterns_simple/PasswordPattern.fxml
+++ b/code/src/patterns_simple/PasswordPattern.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.PasswordPatternController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers_simple.PasswordPatternController">
    <children>
       <FlowPane fx:id="flowPane" alignment="CENTER" prefHeight="35.0" prefWidth="364.0">
          <children>
