--- a/code/src/patterns_simple/BoolInputPattern.fxml
+++ b/code/src/patterns_simple/BoolInputPattern.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.BoolInputPatternController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers_simple.BoolInputPatternController">
    <children>
       <FlowPane fx:id="flowPane" alignment="CENTER" prefHeight="35.0" prefWidth="364.0">
          <children>
