--- a/code/src/patterns_simple/PhoneNumberInputPattern.fxml
+++ b/code/src/patterns_simple/PhoneNumberInputPattern.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import controllers_simple.MaskField ?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.PhoneMaskInputPatternController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers_simple.PhoneMaskInputPatternController">
     <children>
         <FlowPane fx:id="flowPane" alignment="CENTER" prefHeight="35.0" prefWidth="364.0">
             <children>
