--- a/code/src/patterns_simple/SaveButton.fxml
+++ b/code/src/patterns_simple/SaveButton.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="141.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.SaveButtonController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="141.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers_simple.SaveButtonController">
    <children>
       <Button fx:id="saveButton" alignment="CENTER" layoutX="4.0" layoutY="24.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 100px; -fx-font-weight: bold; -fx-cursor: hand;" text="Сохранить" />
    </children>
