--- a/code/src/application/MainWindow.fxml
+++ b/code/src/application/MainWindow.fxml
@@ -12,11 +12,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="367.0" prefWidth="752.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.MainWindowController">
+<AnchorPane prefHeight="367.0" prefWidth="752.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <children>
       <BorderPane fx:id="menuPane" layoutX="-1.0" prefHeight="43.0" prefWidth="754.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -107,16 +109,16 @@
           <RowConstraints maxHeight="320.0" minHeight="10.0" percentHeight="100" prefHeight="250.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane alignment="TOP_CENTER" prefHeight="517.0" prefWidth="270.0">
+            <GridPane alignment="TOP_CENTER" prefWidth="270.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="276.33331298828125" minHeight="10.0" percentHeight="85" prefHeight="276.33331298828125" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="153.0" minHeight="10.0" percentHeight="15" prefHeight="44.333353678385436" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" percentHeight="90.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="153.0" minHeight="7.66668701171875" percentHeight="15.0" prefHeight="10.333343505859375" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView fx:id="tableView" prefHeight="268.0" prefWidth="303.0" style="-fx-border-color: darkgray;">
+                  <TableView fx:id="tableView" prefHeight="299.0" prefWidth="320.0" style="-fx-border-color: darkgray;">
                     <columns>
                       <TableColumn prefWidth="55.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="№Л/д" />
                       <TableColumn prefWidth="105.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Фамилия" />
@@ -124,6 +126,7 @@
                         <TableColumn prefWidth="95.0" style="-fx-background-color: gainsboro; -fx-border-color: gainsboro;" text="Отчество" />
                     </columns>
                   </TableView>
+                  <FlowPane fx:id="buttonsPane" alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
                </children>
                <opaqueInsets>
                   <Insets />
@@ -138,14 +141,6 @@
                 <RowConstraints maxHeight="155.33334350585938" minHeight="10.0" percentHeight="50" prefHeight="140.66668701171875" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Pane prefHeight="95.0" prefWidth="412.0" style="-fx-border-color: darkgray; -fx-background-color: white;">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" top="5.0" />
-                     </GridPane.margin>
-                  </Pane>
                   <TabPane prefHeight="200.0" prefWidth="200.0" stylesheets="@css/tab.css" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="1">
                     <tabs>
                       <Tab style="-fx-background-color: gainsboro; -fx-border-color: darkgray;" text="Конк-ые группы">
@@ -197,6 +192,49 @@
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </TabPane>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="10.0" />
+                     </GridPane.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <top>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Основная информация" BorderPane.alignment="TOP_LEFT">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                           <BorderPane.margin>
+                              <Insets bottom="2.0" left="10.0" />
+                           </BorderPane.margin>
+                        </Text>
+                     </top>
+                     <center>
+                        <BorderPane style="-fx-border-color: darkgray; -fx-background-color: white;" BorderPane.alignment="CENTER">
+                           <bottom>
+                              <BorderPane BorderPane.alignment="CENTER">
+                                 <top>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Сведения о возврате документов" BorderPane.alignment="TOP_LEFT">
+                                       <BorderPane.margin>
+                                          <Insets bottom="2.0" left="15.0" />
+                                       </BorderPane.margin>
+                                    </Text>
+                                 </top>
+                                 <center>
+                                    <FlowPane fx:id="returnInformationField" style="-fx-border-color: darkgray;" BorderPane.alignment="CENTER">
+                                       <BorderPane.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" />
+                                       </BorderPane.margin>
+                                    </FlowPane>
+                                 </center>
+                              </BorderPane>
+                           </bottom>
+                           <center>
+                              <FlowPane fx:id="mainField" BorderPane.alignment="CENTER" />
+                           </center>
+                        </BorderPane>
+                     </center>
+                  </BorderPane>
                </children>
             </GridPane>
          </children>
