--- a/code/src/patterns_simple/AddEditDeleteButtons.fxml
+++ b/code/src/patterns_simple/AddEditDeleteButtons.fxml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.AddEditDeleteButtonsController">
+<Pane xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.AddEditDeleteButtonsController">
    <children>
-      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="423.0">
+      <HBox fx:id="buttonsBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="423.0">
          <children>
-            <Pane prefHeight="75.0" prefWidth="141.0">
+            <FlowPane alignment="CENTER">
                <children>
-                  <Button fx:id="addButton" alignment="CENTER" layoutX="4.0" layoutY="25.0" mnemonicParsing="false" onAction="#addButtonAction" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 100px; -fx-font-weight: bold; -fx-cursor: hand;" text="Добавить" />
+                  <Button fx:id="addButton" alignment="CENTER" mnemonicParsing="false" onAction="#addButtonAction" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 100px; -fx-font-weight: bold; -fx-cursor: hand;" text="Добавить" />
                </children>
-            </Pane>
-            <Pane prefHeight="75.0" prefWidth="141.0">
+            </FlowPane>
+            <FlowPane alignment="CENTER">
                <children>
-                  <Button fx:id="editButton" alignment="CENTER" layoutX="4.0" layoutY="25.0" mnemonicParsing="false" onAction="#editButtonAction" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 100px; -fx-font-weight: bold; -fx-cursor: hand;" text="Редактировать" />
+                  <Button fx:id="editButton" alignment="CENTER" mnemonicParsing="false" onAction="#editButtonAction" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 100px; -fx-font-weight: bold; -fx-cursor: hand;" text="Редактировать" />
                </children>
-            </Pane>
-            <Pane prefHeight="75.0" prefWidth="141.0">
+            </FlowPane>
+            <FlowPane alignment="CENTER">
                <children>
-                  <Button fx:id="deleteButton" alignment="CENTER" layoutX="4.0" layoutY="25.0" mnemonicParsing="false" onAction="#deleteButtonAction" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 100px; -fx-font-weight: bold; -fx-cursor: hand;" text="Удалить" />
+                  <Button fx:id="deleteButton" alignment="CENTER" mnemonicParsing="false" onAction="#deleteButtonAction" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 100px; -fx-font-weight: bold; -fx-cursor: hand;" text="Удалить" />
                </children>
-            </Pane>
+            </FlowPane>
          </children>
       </HBox>
    </children>
