--- a/code/src/patterns_simple/Education.fxml
+++ b/code/src/patterns_simple/Education.fxml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import controllers_simple.MaskField ?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.control.ChoiceBox?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="294.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers_simple.EducationController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.EducationController">
    <children>
-      <ChoiceBox fx:id="levelOfEd" layoutX="179.0" layoutY="26.0" prefHeight="26.0" prefWidth="225.0" />
-      <Label layoutX="34.0" layoutY="30.0" text="Уровень образования" textAlignment="RIGHT" />
-      <ChoiceBox fx:id="typeOfEd" layoutX="179.0" layoutY="63.0" prefHeight="26.0" prefWidth="225.0" />
-      <Label layoutX="61.0" layoutY="67.0" text="Тип образования" textAlignment="RIGHT" />
-      <MaskField fx:id="series" mask="####" layoutX="80.0" layoutY="107.0" prefHeight="26.0" prefWidth="93.0" />
-      <Label layoutX="37.0" layoutY="111.0" text="Серия" textAlignment="RIGHT" />
-      <MaskField fx:id="number" mask="######" layoutX="233.0" layoutY="107.0" prefHeight="26.0" prefWidth="93.0" />
-      <Label layoutX="187.0" layoutY="111.0" text="Номер" textAlignment="RIGHT" />
-      <DatePicker fx:id="dateOfIssue" layoutX="428.0" layoutY="107.0" prefHeight="26.0" prefWidth="132.0" />
-      <Label layoutX="341.0" layoutY="111.0" text="Дата выдачи" textAlignment="RIGHT" />
-      <Label layoutX="34.0" layoutY="161.0" text="Кем выдан" textAlignment="RIGHT" />
-      <TextField fx:id="byWhomIssued" layoutX="124.0" layoutY="157.0" prefHeight="68.0" prefWidth="435.0" />
-      <Button fx:id="editBtn" layoutX="332.0" layoutY="243.0" mnemonicParsing="false" onAction="#edit" text="Редактировать" />
-      <Button fx:id="saveBtn" layoutX="455.0" layoutY="243.0" mnemonicParsing="false" onAction="#save" prefHeight="26.0" prefWidth="93.0" text="Сохранить" />
+      <GridPane fx:id="parentGridPane" prefHeight="400.0" prefWidth="600.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <GridPane fx:id="childGridPane" GridPane.rowIndex="4">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <Pane fx:id="buttonsPane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
+         </children>
+      </GridPane>
    </children>
-</Pane>
+</AnchorPane>
