MainWindow + updated patterns
+ Теперь labels отцентрованы по правому краю;
+ В setWidthHeight теперь передаются 3 параметра: общая длина pane, его высота и длина label. Вы смотрите, в каком из labels в вашей вкладке больше всего текста, подбираете ему ширину, чтобы текст убрался полностью, и всем остальным labels выставляете ту же ширину (3 циферка). Длина input потом определяется оставшимся пространством.

--- a/code/src/patterns_simple/PhoneNumberInputPattern.fxml
+++ b/code/src/patterns_simple/PhoneNumberInputPattern.fxml
@@ -9,7 +9,7 @@
     <children>
         <FlowPane fx:id="flowPane" alignment="CENTER" prefHeight="35.0" prefWidth="364.0">
             <children>
-                <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="nameOfElement" wrappingWidth="100.0" />
+                <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="nameOfElement" textAlignment="RIGHT" wrappingWidth="100.0" />
                 <MaskField fx:id="fieldData" mask="+7(###)###-##-##" prefWidth="210" prefHeight="25">
                     <FlowPane.margin>
                         <Insets left="20.0" />
