--- a/code/src/application/MainWindow.fxml
+++ b/code/src/application/MainWindow.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="367.0" prefWidth="752.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
+<AnchorPane prefHeight="367.0" prefWidth="752.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <children>
       <BorderPane fx:id="menuPane" layoutX="-1.0" prefHeight="43.0" prefWidth="754.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -225,12 +225,18 @@
                                        <BorderPane.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" />
                                        </BorderPane.margin>
+                                       <padding>
+                                          <Insets bottom="10.0" top="10.0" />
+                                       </padding>
                                     </FlowPane>
                                  </center>
                               </BorderPane>
                            </bottom>
                            <center>
-                              <FlowPane fx:id="mainField" BorderPane.alignment="CENTER" />
+                              <FlowPane fx:id="mainField" BorderPane.alignment="CENTER">
+                                 <padding>
+                                    <Insets bottom="10.0" top="10.0" />
+                                 </padding></FlowPane>
                            </center>
                         </BorderPane>
                      </center>
