--- a/code/src/patterns_simple/ChoiceInputPattern.fxml
+++ b/code/src/patterns_simple/ChoiceInputPattern.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers_simple.ChoiceInputPatternController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.ChoiceInputPatternController">
    <children>
       <FlowPane fx:id="flowPane" alignment="CENTER" columnHalignment="CENTER" prefHeight="35.0" prefWidth="364.0">
          <children>
-            <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="NameOfElement" wrappingWidth="100.0" />
+            <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="NameOfElement" textAlignment="RIGHT" wrappingWidth="100.0" />
             <ChoiceBox fx:id="fieldData" prefHeight="16.0" prefWidth="210.0">
                <FlowPane.margin>
                   <Insets left="20.0" />
