--- a/code/src/patterns_simple/DoubleInputPattern.fxml
+++ b/code/src/patterns_simple/DoubleInputPattern.fxml
@@ -10,7 +10,7 @@
    <children>
       <FlowPane fx:id="flowPane" alignment="CENTER" prefHeight="35.0" prefWidth="364.0">
          <children>
-            <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" text="NameOfElement" wrappingWidth="100.0" />
+            <Text fx:id="nameOfField" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT" text="NameOfElement" wrappingWidth="100.0" />
             <TextField fx:id="fieldData" prefHeight="16.0" prefWidth="210.0">
                <FlowPane.margin>
                   <Insets left="20.0" />
