--- a/code/src/patterns_simple/Education.fxml
+++ b/code/src/patterns_simple/Education.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_simple.EducationController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.EducationController">
    <children>
       <GridPane fx:id="parentGridPane" prefHeight="400.0" prefWidth="700.0">
         <columnConstraints>
