--- a/code/src/patterns_tabs/IndividualAchievementsTab.fxml
+++ b/code/src/patterns_tabs/IndividualAchievementsTab.fxml
@@ -9,16 +9,16 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.IndividualAchievementsTabController">
+<AnchorPane prefHeight="246.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.IndividualAchievementsTabController">
     <children>
-        <GridPane layoutX="200.0" layoutY="200.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <GridPane layoutX="200.0" layoutY="200.0" prefHeight="400.0" prefWidth="600.0" style="-fx-border-color: darkgray; -fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="267.0" minHeight="10.0" prefHeight="260.6666564941406" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="66.66666666666669" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="267.0" minHeight="10.0" prefHeight="148.99998982747397" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="43.00001017252603" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="11.33331298828125" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <TableView prefHeight="200.0" prefWidth="200.0">
