enlarged the size of MainWindow and adjusted Education tab

--- a/code/src/application/css/tab.css
+++ b/code/src/application/css/tab.css
@@ -1,6 +1,6 @@
 .tab-pane *.tab-header-background 
 {
--fx-background-color: -fx-outer-border, null;
+-fx-background-color: -fx-outer-border, rgb(244, 244, 244);
 }
 
 .tab
