--- a/code/src/patterns_tabs/CompetitiveGroupsTab.fxml
+++ b/code/src/patterns_tabs/CompetitiveGroupsTab.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="246.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.CompetitiveGroupsTabController">
+<AnchorPane prefHeight="246.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.CompetitiveGroupsTabController">
     <children>
         <GridPane layoutX="200.0" layoutY="200.0" prefHeight="221.0" prefWidth="600.0" style="-fx-border-color: darkgray; -fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
