--- a/code/src/patterns_tabs/CompetitiveGroupsTab.fxml
+++ b/code/src/patterns_tabs/CompetitiveGroupsTab.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,39 +9,19 @@
 
 <AnchorPane prefHeight="246.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.CompetitiveGroupsTabController">
     <children>
-        <GridPane layoutX="200.0" layoutY="200.0" prefHeight="221.0" prefWidth="600.0" style="-fx-border-color: darkgray; -fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <GridPane fx:id="mainGridPane" layoutX="179.0" layoutY="135.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="267.0" minHeight="10.0" prefHeight="148.99998982747397" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="43.00001017252603" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="126.66665140787762" minHeight="10.0" prefHeight="11.33331298828125" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="214.66668701171875" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="15.33331298828125" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
             </rowConstraints>
-         <children>
-            <TableView prefHeight="200.0" prefWidth="200.0" />
-            <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="59.0" prefWidth="557.0" GridPane.rowIndex="1">
-               <children>
-                  <Button fx:id="addCompetitiveGroupButton" alignment="CENTER" contentDisplay="CENTER" maxWidth="600.0" minWidth="200.0" mnemonicParsing="false" onAction="#openModalWindow" prefHeight="25.0" prefWidth="350.0" style="-fx-background-color: #BDBDBD; -fx-background-radius: 20px; -fx-cursor: hand;" text="Добавить конкурсную группу" />
-               </children>
-            </FlowPane>
-            <GridPane prefHeight="91.0" prefWidth="557.0" GridPane.rowIndex="2">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <FlowPane fx:id="buttonsPane" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-            <FlowPane prefHeight="139.0" prefWidth="557.0" />
-         </children>
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </padding>
+            <children>
+                <FlowPane fx:id="buttonsPane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
+                <TableView fx:id="fieldsTable" editable="true" prefHeight="200.0" prefWidth="600.0" />
+            </children>
         </GridPane>
     </children>
 </AnchorPane>
